spacing of issues

--- a/src/sass/partials/_issues.scss
+++ b/src/sass/partials/_issues.scss
@@ -62,6 +62,13 @@
     margin: 0;
 }
 
+.uit-issue__group-description__description {
+    @include mq(desktop) {
+        max-width: 380px;
+        margin: 0 auto;
+    }
+}
+
 .uit-issue__groups {
     @include mq(desktop) {
         display: flex;
@@ -189,8 +196,11 @@
 }
 
 .uit-issue__group-descriptions {
+    text-align: center;
+
     @include mq(desktop) {
         padding-right: 20px;
+        min-height: 6em;
     }
 }
 
@@ -204,10 +214,11 @@
 
 .uit-issue__candidiates {
     overflow: auto;
-    margin-top: 4px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    max-width: 280px;
+    margin: 4px auto 0;
 }
 
 .uit-issue__candidate {
@@ -224,6 +235,11 @@
         width: 62px;
         height: 62px;
     }
+}
+
+.uit-issue__candidate-spacer {
+    width: 100%;
+    height: 1px;
 }
 
 .uit-issue__candidiate-image {
